# swift_cast

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  utile.cpp
src/include/: sc_splash.h  utile.hpp
